header and footer

--- a/public/index.html
+++ b/public/index.html
@@ -1,59 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gadget Exchange Platform</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
-  <link rel="stylesheet" href="css/styles.css" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gadget Exchange</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <div class="site-wrapper">
+    <nav class="teal darken-2">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">GadgetX</a>
+        <div class="right-align">
+          <a
+            href="#!"
+            class="waves-effect waves-light btn modal-trigger"
+            data-target="modal-register"
+            >Register</a
+          >
+          <a
+            href="#!"
+            class="waves-effect waves-light btn modal-trigger"
+            data-target="modal-login"
+            >Login</a
+          >
+        </div>
+      </div>
+    </nav>
 
-  <nav class="teal darken-2">
-    <div class="nav-wrapper container">
-      <a href="#" class="brand-logo">GadgetX</a>
-    </div>
-  </nav>
+    <div class="container">
+      <h3 class="center">Welcome to Gadget Exchange</h3>
+      <div class="row center"></div>
 
-  <div class="container">
-    <h3 class="center">Welcome to Gadget Exchange</h3>
-    <div class="row center">
-      <a href="#" class="waves-effect waves-light btn modal-trigger" data-target="modal-register">Register</a>
-      <a href="#" class="waves-effect waves-light btn modal-trigger" data-target="modal-login">Login</a>
+      <div class="section">
+        <h5>Post a Listing</h5>
+        <form id="listing-form">
+          <div class="input-field">
+            <input type="text" id="title" required />
+            <label for="title">Gadget Title</label>
+          </div>
+          <div class="input-field">
+            <input type="text" id="category" required />
+            <label for="category">Category</label>
+          </div>
+          <div class="input-field">
+            <input type="url" id="imageUrl" required />
+            <label for="imageUrl">Image URL</label>
+          </div>
+          <button type="submit" class="modal-close waves-effect btn">
+            Submit
+          </button>
+        </form>
+      </div>
     </div>
-  </div>
 
-  <!-- Modal structure for Register -->
-  <div id="modal-register" class="modal">
-    <div class="modal-content">
-      <h4>Register</h4>
-      <form>
-        <input type="text" placeholder="Username" />
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Password" />
-      </form>
+    <!-- Register Modal -->
+    <div id="modal-register" class="modal">
+      <div class="modal-content">
+        <h4>Register</h4>
+        <form id="registerForm">
+          <input type="text" id="regUsername" placeholder="Username" required />
+          <input type="email" id="regEmail" placeholder="Email" required />
+          <input
+            type="password"
+            id="regPassword"
+            placeholder="Password"
+            required
+          />
+        </form>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" id="submitRegister" class="modal-close waves-effect btn"
+          >Submit</a
+        >
+      </div>
     </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect btn">Submit</a>
-    </div>
-  </div>
 
-  <!-- Modal structure for Login -->
-  <div id="modal-login" class="modal">
-    <div class="modal-content">
-      <h4>Login</h4>
-      <form>
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Password" />
-      </form>
+    <!-- Login Modal -->
+    <div id="modal-login" class="modal">
+      <div class="modal-content">
+        <h4>Login</h4>
+        <form id="loginForm">
+          <input type="email" id="loginEmail" placeholder="Email" required />
+          <input
+            type="password"
+            id="loginPassword"
+            placeholder="Password"
+            required
+          />
+        </form>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" id="submitLogin" class="modal-close waves-effect btn"
+          >Login</a
+        >
+      </div>
     </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect btn">Login</a>
+    <footer class="page-footer teal darken-2">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Gadget Exchange</h5>
+            <p class="grey-text text-lighten-4">
+              A simple platform to exchange your old gadgets for something new.
+              Built with Node.js and Materialize.
+            </p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#">Register</a></li>
+              <li><a class="grey-text text-lighten-3" href="#">Login</a></li>
+              <li>
+                <a class="grey-text text-lighten-3" href="#">Post Listing</a>
+              </li>
+              <li><a class="grey-text text-lighten-3" href="#">About</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container center-align">
+          © 2025 GadgetX Exchange. All rights reserved.
+        </div>
+      </div>
+    </footer>
     </div>
-  </div>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="js/scripts.js"></script>
-</body>
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="js/scripts.js"></script>
+  </body>
 </html>
