--- a/public/login.html
+++ b/public/login.html
@@ -35,7 +35,7 @@
           </div>
 
           <div class="right-align">
-            <button type="submit" class="btn blue">Submit</button>
+            <button type="submit" class="waves-effect waves-light btn">Submit</button>
             <button type="button" id="clearBtn" class="btn grey">Clear</button>
           </div>
 
