admin panel manage users

--- a/public/login.html
+++ b/public/login.html
@@ -23,7 +23,7 @@
         <h4 class="center">Login</h4>
         <form id="loginForm">
           <div class="input-field">
-            <input type="email" id="email" name="email" />
+            <input type="text" id="email" name="email" />
             <label for="email">Email</label>
             <span class="error-text" id="emailError">Invalid email</span>
           </div>
@@ -35,7 +35,7 @@
           </div>
 
           <div class="right-align">
-            <button type="submit" class="btn blue">Submit</button>
+            <button type="submit" class="btn ">Submit</button>
             <button type="button" id="clearBtn" class="btn grey">Clear</button>
           </div>
 
