--- a/public/register.html
+++ b/public/register.html
@@ -41,7 +41,7 @@
           </div>
 
           <div class="right-align">
-            <button type="submit" class="btn green">Register</button>
+            <button type="submit" class="btn ">Register</button>
             <button type="button" id="clearBtn" class="btn grey">Clear</button>
           </div>
 
