--- a/public/admin.html
+++ b/public/admin.html
@@ -38,6 +38,11 @@
                 >View Reports</a
               >
             </li>
+
+            <li>
+              <a href="/login.html" class="btn red">Logout</a>
+
+            </li>
           </ul>
         </div>
 
