--- a/public/adminproducts.html
+++ b/public/adminproducts.html
@@ -40,6 +40,10 @@
                 >View Reports</a
               >
             </li>
+            <li>
+              <a href="/logout.html" class="btn red">Logout</a>
+
+            </li>
           </ul>
         </div>
 
