--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,13 @@
                   >Login</a
                 >
               </li>
+              <li>
+              <a href="/index.html" class="btn red">Logout</a>
+
+            </li>
+
+
+              
             </ul>
           </div>
         </nav>
