--- a/public/admin.html
+++ b/public/admin.html
@@ -33,7 +33,7 @@
             <a href="adminproducts.html" class="btn-flat waves-effect waves-teal">Manage Products</a>
           </li>
           <li>
-            <a href="#" class="btn-flat waves-effect waves-teal">View Reports</a>
+            <a href="reports.html" class="btn-flat waves-effect waves-teal">View Reports</a>
           </li>
         </ul>
       </div>
