--- a/public/adminproducts.html
+++ b/public/adminproducts.html
@@ -36,7 +36,7 @@
               >
             </li>
             <li>
-              <a href="#" class="btn-flat waves-effect waves-teal"
+              <a href="reports.html" class="btn-flat waves-effect waves-teal"
                 >View Reports</a
               >
             </li>
