--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,13 @@
             </li>
             <li>
               <a href="/index.html" class="btn red">Logout</a>
-
             </li>
+            <li>
+        <a href="wishlist.html" title="Wishlist">
+          <i class="material-icons">favorite_border</i>
+        </a>
+      </li>
+
 
 
 
@@ -111,6 +116,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="js/scripts.js"></script>
+  
 
 </body>
 
